--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eg": "0.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
